recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:7: error: ';' expected but 'else' found.
	else { avance(1:Double); recule(1:Double); }
        ^